Updating formatter lines in CI config (#87)
* Updating formatter lines in CI config

* Updating gradle version while I'm at it

* Updating clang version

* Updating styleguid to match what WPILib has

* Updating checstyle and PMD versions

* Ran formatter

* Formatter

* Cleanup

* Fixed the formatting?

* Temp

* ugh

* Removing unnecessary exception